--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "shopping-list",
-    "description": "This project is really great.",
+    "description": "Shopping List application",
     "slug": "shopping-list",
     "privacy": "public",
     "sdkVersion": "27.0.0",
