--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "private": true,
   "dependencies": {
     "expo": "^27.0.1",
+    "firebase": "^4.13.1",
     "react": "16.3.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.2.0"
   }
 }
