--- a/package.json
+++ b/package.json
@@ -1,13 +1,23 @@
 {
   "main": "node_modules/expo/AppEntry.js",
   "private": true,
+  "scripts": {
+    "test": "node_modules/.bin/jest"
+  },
+  "jest": {
+    "preset": "jest-expo"
+  },
   "dependencies": {
     "expo": "^27.0.1",
     "firebase": "^4.13.1",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
+    "react-navigation": "^2.0.0-rc.9",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0"
+  },
+  "devDependencies": {
+    "jest-expo": "^27.0.1"
   }
 }
