Add git secret and config file

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "main": "node_modules/expo/AppEntry.js",
   "private": true,
   "scripts": {
-    "test": "node_modules/.bin/jest"
+    "test": "node_modules/.bin/jest",
+    "pre-commit": "git secret hide"
   },
   "jest": {
     "preset": "jest-expo"
