--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: node_js
 node_js:
   - "node"
+cache:
+  directories:
+    - node_modules
 script:
-  - 'if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then npm run appr; fi'
+  - 'export BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH; else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)'
+  - 'echo "TRAVIS_BRANCH=$TRAVIS_BRANCH, PR=$PR, BRANCH=$BRANCH"'
+  - 'if [ "$TRAVIS_PULL_REQUEST" != "false" ] && [ "$BRANCH" == "stable" ]; then npm run appr; fi'
