--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,11 @@ node_js:
 cache:
   directories:
     - node_modules
+branches:
+  only:
+    - master
+    - alfa
+    - stable
 script:
   - 'npm test'
   - 'export BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH; else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)'
