--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^4.13.1",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
+    "react-native-elements": "^0.19.1",
     "react-navigation": "^2.0.0-rc.9",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
