--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
     "rimraf": "^2.6.2",
+    "rxjs": "6.1.0",
     "sentry-cli-binary": "^1.25.0",
     "sentry-expo": "^1.7.0"
   },
