--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo": "^27.0.1",
     "firebase": "^4.13.1",
     "mkdirp": "^0.5.1",
+    "moment": "^2.22.1",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
     "react-native-elements": "^0.19.1",
