--- a/app.json
+++ b/app.json
@@ -1,10 +1,11 @@
 {
   "expo": {
-    "name": "shopping-list",
-    "description": "Shopping List application",
+    "name": "Shopping List",
+    "description": "Shopping List",
     "slug": "shopping-list",
     "privacy": "public",
     "sdkVersion": "27.0.0",
+    "primaryColor": "#55ab2b",
     "platforms": ["ios", "android"],
     "version": "1.0.0",
     "orientation": "portrait",
@@ -32,7 +33,11 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.devinim.shoppinglist"
+    },
+    "android": {
+      "package": "com.devinim.shoppinglist"
     },
     "androidStatusBar": {
       "barStyle": "light-content",
