--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "moment": "^2.22.1",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
-    "react-native-elements": "^0.19.1",
+    "react-native-elements": "^1.0.0-beta5",
+    "react-native-popup-dialog": "^0.11.46",
+    "react-native-swipeable": "^0.6.0",
+    "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.0.0-rc.9",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
