--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
     "react-native-elements": "^1.0.0-beta5",
     "react-native-popup-dialog": "^0.11.46",
+    "react-native-safe-area-view": "^0.8.0",
     "react-native-swipeable": "^0.6.0",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.0.0-rc.9",
