--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
     "rimraf": "^2.6.2",
-    "sentry-cli-binary": "^1.25.0",
+    "@sentry/cli": "^1.34.0",
     "sentry-expo": "^1.7.0"
   },
   "devDependencies": {
