--- a/app.json
+++ b/app.json
@@ -4,9 +4,12 @@
     "description": "Shopping List",
     "slug": "shopping-list",
     "privacy": "public",
-    "sdkVersion": "27.0.0",
+    "sdkVersion": "33.0.0",
     "primaryColor": "#55ab2b",
-    "platforms": ["ios", "android"],
+    "platforms": [
+      "ios",
+      "android"
+    ],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/logo.png",
