--- a/package.json
+++ b/package.json
@@ -22,14 +22,11 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/spawn-async": "^1.3.0",
-    "config-leaf": "^0.3.0",
-    "expo": "^27.0.1",
-    "firebase": "^5.3.1",
-    "mkdirp": "^0.5.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
+    "expo": "^33.0.0",
+    "react": "16.8.3",
+    "firebase": "^7.2.2",
     "moment": "^2.22.1",
-    "react": "16.3.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
     "react-native-elements": "^1.0.0-beta5",
     "react-native-popup-dialog": "^0.11.46",
     "react-native-swipeable": "^0.6.0",
@@ -39,22 +36,24 @@
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
     "rimraf": "^2.6.2",
-    "@sentry/cli": "^1.34.0",
     "sentry-expo": "^1.7.0"
   },
   "devDependencies": {
-    "appr": "^2.0.0",
+    "@expo/spawn-async": "^1.3.0",
     "babel-eslint": "^8.2.3",
     "eslint": "^4.19.1",
+    "mkdirp": "^0.5.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
-    "exp": "^53.1.0",
+    "expo-cli": "^3.17.21",
+    "expo-release-maker": "^2.0.5",
     "husky": "^0.14.3",
-    "jest-expo": "^27.0.1",
+    "jest-expo": "^37.0.0",
     "lint-staged": "^7.2.2",
+    "@sentry/cli": "^1.34.0",
     "prettier": "^1.14.2"
   }
 }
