--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "expo": "^35.0.0",
-    "firebase": "^7.2.2",
+    "expo": "^37.0.0",
+    "firebase": "7.9.0",
     "moment": "^2.22.1",
-    "react": "16.8.3",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react": "16.9.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.0.tar.gz",
     "react-native-elements": "^1.0.0-beta5",
     "react-native-popup-dialog": "^0.11.46",
     "react-native-swipeable": "^0.6.0",
@@ -51,7 +51,7 @@
     "expo-cli": "^3.17.21",
     "expo-release-maker": "^2.0.5",
     "husky": "^0.14.3",
-    "jest-expo": "^35.0.0",
+    "jest-expo": "^37.0.0",
     "lint-staged": "^7.2.2",
     "mkdirp": "^0.5.1",
     "prettier": "^1.14.2"
