--- a/package.json
+++ b/package.json
@@ -36,11 +36,12 @@
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
     "rimraf": "^2.6.2",
-    "sentry-expo": "~2.0.0"
+    "sentry-expo": "~2.0.0",
+    "mkdirp": "^0.5.1",
+    "@sentry/cli": "^1.34.0",
+    "@expo/spawn-async": "^1.3.0"
   },
   "devDependencies": {
-    "@expo/spawn-async": "^1.3.0",
-    "@sentry/cli": "^1.34.0",
     "babel-eslint": "^8.2.3",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
@@ -53,7 +54,6 @@
     "husky": "^0.14.3",
     "jest-expo": "^37.0.0",
     "lint-staged": "^7.2.2",
-    "mkdirp": "^0.5.1",
     "prettier": "^1.14.2"
   }
 }
